# metrics-derive

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: expand.rs  lib.rs
tests/: metrics.rs
tests/compile-fail/: metric_attr.rs  metrics_attr.rs
