[package]
name = "metrics-derive"
description = "Proc macro for automatically describing and initializing metrics"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rkrasiuk/metrics-derive"
exclude = [".github/"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
regex = "1.6.0"

[dev-dependencies]
metrics = "0.23.0"
serial_test = "3"
trybuild = "1.0"
